# FittingProgramme

./: .gitignore  CMakeLists.txt  FindROOT.cmake  Makefile  README.md  instantiate.py  rename.py  rsync.zsh  rsync_reverse.zsh
calc_fixed_params/: calc_B2Dhst_obs.py  calc_Bu2Dst0hst_fracs.py  calc_bkgFacs.py  calc_obs_uncertainties.py  calc_pdf_fracs.py  gamma_obs.py  numpy_obs.py
error_studies/: CMakeLists.txt  expected_corrections.py
error_studies/include/: CommonFunctions.h  Configuration.h  Model.h  ToyFunctions.h
error_studies/shell_scripts/: run_toys.py  run_toys.sh.tmpl  run_toys_submit.sh.tmpl
error_studies/src/: CommonFunctions.cpp  Configuration.cpp  Model.cpp  SimpleToy.cpp  ToyD1D.cpp  ToyFunctions.cpp
include/: BachelorChargeVars.h  BachelorDaughtersVars.h  BachelorVars.h  BkgYields.h  Configuration.h  DaughtersVars.h  Definitions.h  Efficiencies.h  Fitting.h  GlobalVars.h  NeutralBachelorChargeVars.h  NeutralBachelorDaughtersVars.h  NeutralBachelorDaughtersVars_temp.h  NeutralBachelorVars.h  NeutralChargeVars.h  NeutralDaughtersSharedVars.h  NeutralDaughtersVars.h  NeutralVars.h  Params.h  ParseArguments.h  Pdf.h  PdfMC.h  Pdf_tmp.h  Plotting.h  RooCruijff.h  SigYields.h  SignalYields.h  Skeleton.h  SpecialisedVars.h  ToyFunctions.h  YearVars.h  Yields.h
multip_scripts/: generate.py  generate.sh.tmpl  generate_from_data.sh.tmpl  generate_from_mc.sh.tmpl  generate_from_model.sh.tmpl  run_box_scan.py  run_box_scan.sh.tmpl  run_systematics.py  run_systematics.sh.tmpl
new_toys/: CommonFunctions.cpp  CommonFunctions.h  Makefile  SimToy1D_ReadDataSet_old.cpp  SimToy2D_SaveDataSet_old.cpp  box_scan_pulls.py
new_toys/shell_scripts/: fit.py  fit.sh.tmpl  fit_submit.sh.tmpl  generate.py  generate.sh.tmpl  generate_submit.sh.tmpl  plot_box_scan_pulls.py  plot_box_scan_pulls.sh.tmpl  plot_box_scan_pulls_submit.sh.tmpl  run_box_scan.py
results_analysis/: Yields_introduction.tex  analyse_error.py  analyse_mc_pulls.py  analyse_pulls.py  analyse_ratio.py  analyse_result.py  analyse_result_new.py  apply_errors.py  apply_toy_biases.py  calculate_R_A_ADS.py  calculate_result.py  calculate_systematics.py  compare_results.py  compare_split_results.py  correlation_table.py  isMuon_compatibility.py  plot_pulls.py  plot_toy_observables.py  plots_gamma.tex  plots_gamma_split.tex  plots_gamma_total.tex  plots_pi0_total.tex  pull_tables.py  read_in_files.py  remove_json_key.py  resubmit_terminated_jobs.py  results_systematics.py  stat_corr_table.py  syst_corr_pi0_results.py  syst_corr_table.py  systematic_breakdown.py  systematic_params.py  systematics_to_json.py  systematics_to_json_new.py  useful_functions.py
results_analysis/gammadini/: gammadini_input.py
results_analysis/plots/: plots_gamma_split.tex  plots_gamma_total.tex  plots_pi0_split.tex  plots_pi0_total.tex  pulls_gamma.tex  pulls_pi0.tex
roodatasets/: 2011_down_k_pi0_kk_minus.root  2011_down_k_pi0_kk_plus.root  2011_down_k_pi0_kpi_minus.root  2011_down_k_pi0_kpi_plus.root  2011_down_k_pi0_pik_minus.root  2011_down_k_pi0_pik_plus.root  2011_down_k_pi0_pipi_minus.root  2011_down_k_pi0_pipi_plus.root  2011_down_pi_pi0_kk_minus.root  2011_down_pi_pi0_kk_plus.root  2011_down_pi_pi0_kpi_minus.root  2011_down_pi_pi0_kpi_plus.root  2011_down_pi_pi0_pik_minus.root  2011_down_pi_pi0_pik_plus.root  2011_down_pi_pi0_pipi_minus.root  2011_down_pi_pi0_pipi_plus.root  2011_up_k_pi0_kk_minus.root  2011_up_k_pi0_kk_plus.root  2011_up_k_pi0_kpi_minus.root  2011_up_k_pi0_kpi_plus.root  2011_up_k_pi0_pik_minus.root  2011_up_k_pi0_pik_plus.root  2011_up_k_pi0_pipi_minus.root  2011_up_k_pi0_pipi_plus.root  2011_up_pi_pi0_kk_minus.root  2011_up_pi_pi0_kk_plus.root  2011_up_pi_pi0_kpi_minus.root  2011_up_pi_pi0_kpi_plus.root  2011_up_pi_pi0_pik_minus.root  2011_up_pi_pi0_pik_plus.root  2011_up_pi_pi0_pipi_minus.root  2011_up_pi_pi0_pipi_plus.root  2012_down_k_pi0_kk_minus.root  2012_down_k_pi0_kk_plus.root  2012_down_k_pi0_kpi_minus.root  2012_down_k_pi0_kpi_plus.root  2012_down_k_pi0_pik_minus.root  2012_down_k_pi0_pik_plus.root  2012_down_k_pi0_pipi_minus.root  2012_down_k_pi0_pipi_plus.root  (+56 more)
shell_scripts/: compile_toys.sh  generate.sh.tmpl  generate_new.py  plot_mc_pulls.py  plot_mc_pulls.sh.tmpl  plot_mc_pulls_submit.sh.tmpl  plot_pulls.py  plot_pulls.sh.tmpl  plot_pulls_submit.sh.tmpl  run_box_scan.py  run_box_scan.sh.tmpl  run_box_scan_submit.sh.tmpl  run_mc_scan.py  run_mc_scan.sh.tmpl  run_mc_scan_submit.sh.tmpl  run_systematics.py  run_systematics.sh.tmpl  run_systematics_submit.sh.tmpl  run_toys.py  run_toys.sh.tmpl  run_toys_data.sh.tmpl  run_toys_model.sh.tmpl  run_toys_submit.sh.tmpl  run_toys_submit_tmp.sh.tmpl
shell_scripts/box_effs/: CalcEffAroundBox.cpp  CalcEffBoxSteps.cpp  (+20 more)
src/: BachelorChargeVars.cpp  BachelorDaughtersVars.cpp  BachelorVars.cpp  Configuration.cpp  DaughtersVars.cpp  Definitions.cpp  Efficiencies.cpp  Fitting.cpp  FittingMC.cpp  Fitting_Old.cpp  Fitting_Temp.cpp  GammaKVars.cpp  GammaPiVars.cpp  GammaVars.cpp  GlobalVars.cpp  LoopOverFiles.py  Main.cpp  NeutralBachelorChargeVars.cpp  NeutralBachelorDaughtersVars.cpp  NeutralBachelorVars.cpp  NeutralDaughtersSharedVars.cpp  NeutralDaughtersVars.cpp  NeutralVars.cpp  NeutralVarsGamma.cpp  NeutralVarsPi0.cpp  Params.cpp  ParseArguments.cpp  PartialSpecialization.cpp  Pdf.cpp  PdfMC.cpp  Pdfs_GammaMinus.cpp  Pdfs_GammaPlus.cpp  Pdfs_GammaTotal.cpp  Pdfs_Pi0Minus.cpp  Pdfs_Pi0Plus.cpp  Pdfs_Pi0Total.cpp  Pi0KVars.cpp  Pi0PiVars.cpp  Pi0Vars.cpp  PlotToys.cpp  (+15 more)
test/: ManySimToys.cpp  ManyToys.cpp  batch_submission.py  batch_submission.sh
toys_test/: BoxCutProfiles.cpp  ChebyshevToy.cpp  FitManySimToys.cpp  FitManyToys.cpp  Makefile  ManySimToys.cpp  ManySimToys1D.cpp  ManySimToys2D.cpp  ManyToys.cpp  RooCruijff.cpp  SimToy.cpp  SimToy1D_ReadDataSet.cpp  SimToy1D_ReadMC.cpp  SimToy1D_ReadSaveDataSet.cpp  SimToy1DpiK_ReadSaveDataSet.cpp  SimToy2D_SaveDataSet.cpp  SimToysNew.cpp  Simultaneous1DToy.cpp  Triple1D.cpp  batch_submission.py  batch_submission.sh  get_box_pulls.py  plotting.py  read_in_box_files.py  read_in_files.py  run_box_scan.py
(+16 files in other folders)
